sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: ')' expected but ',' found.
  for(j<-a-2 to 0, -1){
                 ^AlgBubbleSort1:14: error: illegal start of simple expression
      } 
      ^